--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cyberchef",
+  "name": "tau",
   "version": "10.5.2",
   "description": "The Cyber Swiss Army Knife for encryption, encoding, compression and data analysis.",
   "author": "n1474335 <n1474335@gmail.com>",
@@ -25,14 +25,14 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/gchq/CyberChef/"
+    "url": "https://github.com/gchq/Tau/"
   },
   "main": "src/node/wrapper.js",
   "exports": {
     "import": "./src/node/index.mjs",
     "require": "./src/node/wrapper.js"
   },
-  "bugs": "https://github.com/gchq/CyberChef/issues",
+  "bugs": "https://github.com/gchq/Tau/issues",
   "browserslist": [
     "Chrome >= 50",
     "Firefox >= 38",
