--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-transform-builtin-extend": "1.1.2",
     "base64-loader": "^1.0.0",
-    "chromedriver": "^114.0.2",
+    "chromedriver": "^120.0.1",
     "cli-progress": "^3.12.0",
     "colors": "^1.4.0",
     "copy-webpack-plugin": "^11.0.0",
@@ -63,7 +63,7 @@
     "css-loader": "6.7.3",
     "eslint": "^8.35.0",
     "grunt": "^1.6.1",
-    "grunt-chmod": "~1.1.1",
+    "grunt-chmod": "^1.0.3",
     "grunt-concurrent": "^3.0.0",
     "grunt-contrib-clean": "~2.0.1",
     "grunt-contrib-connect": "^3.0.0",
@@ -72,12 +72,12 @@
     "grunt-eslint": "^24.0.1",
     "grunt-exec": "~3.0.0",
     "grunt-webpack": "^5.0.0",
-    "grunt-zip": "^0.20.0",
+    "grunt-zip": "^1.0.0",
     "html-webpack-plugin": "^5.5.0",
     "imports-loader": "^4.0.1",
     "mini-css-extract-plugin": "2.7.3",
     "modify-source-webpack-plugin": "^3.0.0",
-    "nightwatch": "^2.6.16",
+    "nightwatch": "^3.3.8",
     "postcss": "^8.4.21",
     "postcss-css-variables": "^0.18.0",
     "postcss-import": "^15.1.0",
@@ -126,14 +126,14 @@
     "flat": "^5.0.2",
     "geodesy": "1.1.3",
     "highlight.js": "^11.7.0",
-    "jimp": "^0.16.13",
+    "jimp": "^0.3.5",
     "jquery": "3.6.4",
     "js-crc": "^0.2.0",
     "js-sha3": "^0.8.0",
     "jsesc": "^3.0.2",
     "json5": "^2.2.3",
     "jsonpath-plus": "^7.2.0",
-    "jsonwebtoken": "8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "jsqr": "^1.4.0",
     "jsrsasign": "^10.6.1",
     "kbpgp": "2.1.15",
